added sponsor section and made it responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -156,23 +156,50 @@ main > section{
     max-width: 540px;
 }
 
+/* sponsor section */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
+
 
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, 
     .nav-links, 
-    .teams{
+    .teams
+    {
         flex-direction: column;
     }
 
-    .team-img-container{
-        grid-template-columns: repeat(1, 1fr);
+    .team-img-container, 
+    .facts-container, 
+    .sponsor-companies{
+        grid-template-columns: 1fr;  }
+    
+    .facts-container, .sponsor-companies{
+        justify-items: center;
+        gap: 24px;
     }
-
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
+    }
     .our-features{
         margin-left: 20px;
     }
 }
+
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -181,6 +208,12 @@ main > section{
     }
     .our-features{
         margin: 50px auto;
+    }
+
+    .sponsor-companies, .facts-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
     
 }
