--- a/styles/architects.css
+++ b/styles/architects.css
@@ -121,7 +121,31 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* feature section related styles */
 
+.features{
+    gap: 140px;
+}
+
+#feature-section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+
+.feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+}
+
+.feature-card .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    
+}
 
 /* some facts related style */
 .facts-container{
