added experience badge and made featured section responsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -147,6 +147,23 @@ main > section{
     
 }
 
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.featured-architect img{
+    width: 100%;
+}
+
 /* some facts related style */
 .facts-container{
     display: grid;
@@ -200,7 +217,8 @@ main > section{
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, 
-    .nav-links, 
+    .nav-links,
+    .features, 
     .teams
     {
         flex-direction: column;
@@ -222,12 +240,17 @@ main > section{
     .our-features{
         margin-left: 20px;
     }
+
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
 
 
 /* medium size device */
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams, .features{
         flex-direction: column;
     }
     .our-features{
@@ -240,4 +263,8 @@ main > section{
         justify-items: center;
     }
     
+     #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
 }
