--- a/styles/architects.css
+++ b/styles/architects.css
@@ -213,29 +213,25 @@ main > section{
     filter: grayscale(100%);
 }
 
-footer{
+#footer-container{
+    max-width: 1570px;
     width: 100%;
-}
-
-.footer-container{
     background-color: #FFF4E7;
-    width: 1440px;
-    margin: 130px 195px 127px;
-    margin-left: 227px;
-   
+    margin: 119px auto;
+    
 }
 
-.copyright-container{
-    color:#727272;
+
+.footer-content{
+    font-size: 1.25rem;
+    color: #424242;
+    padding:39px 200px;
     text-align: center;
-    margin-bottom: 216px;
-    padding: 40px 210px;
-    font-size: 20px;
 }
 
 
 /* responsive media query */
-@media screen and (max-width:576px) {
+@media screen and (max-width: 576px) {
     .navbar, 
     .nav-links,
     .features, 
@@ -246,10 +242,12 @@ footer{
 
     .team-img-container, 
     .facts-container, 
-    .sponsor-companies{
-        grid-template-columns: 1fr;  }
+    .sponsor-companies
+    {
+        grid-template-columns: 1fr;  
+    }
     
-    .facts-container, .sponsor-companies{
+    .facts-container{
         justify-items: center;
         gap: 24px;
     }
@@ -265,6 +263,20 @@ footer{
         margin-top: 20px;
         margin-left: 20px;
     }
+
+    #footer-container{
+    background-color: #FFF4E7;
+    max-width: 100%;
+    
+}
+
+.footer-content{
+    font-size: .50rem;
+    color: #424242;
+    padding:10px 10px;
+    text-align: center;
+}
+
 }
 
 
